<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Emergency Call</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="Check_login"></string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="t1">Latitude</string>
    <string name="t2">Longitude</string>
    <string name="b1">Start</string>
    <string name="b2">End</string>
    <string name="t3"></string>
    <string name="t4">Address</string>
    <string name="title_activity_splash_screen">Emergency Call</string>
    <string name="logout">Log out</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="google_maps_key">AIzaSyCRklfFR1zgGdELL0gkqii-2QsfOUBo3mw</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map">Show map</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_about">aboutActivity</string>


</resources>
